--- a/EngineeringScience - Advisory Boards.html
+++ b/EngineeringScience - Advisory Boards.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Caveat|Montserrat:400,600&display=swap" rel="stylesheet">
 	
 	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.min.js"></script>
+   
   <script type="module" src="js/jquery.csv.js"></script>
 	
 	<link rel="stylesheet" href="css/styles.css">
@@ -45,15 +45,16 @@
 
 </script>
 <script>
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
+	function Trigger() {
+    var x = document.getElementById("Topnavbar");
+    if (x.className === "navstyle") {
+      x.className += " responsive";
+    } else {
+      x.className = "navstyle";
+    }
   }
-}
 </script>
+
 <style>	
 	.button1 {
   background-color: white; 
